tdf#125362 Update tab dialog example set after Apply

Change-Id: I0f6ad5273b285080bf2bc55fca3a2365b5b42bbf
Reviewed-on: https://gerrit.libreoffice.org/74325
Tested-by: Jenkins
Reviewed-by: Jim Raykowski <raykowj@gmail.com>
(cherry picked from commit fc938b4310a8f5fcc8ee2846acfeb6f6d818b9f5)
Reviewed-on: https://gerrit.libreoffice.org/74712
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>